tests/compile_fail/missing_mapping_after.out
In file included from tests/compile_fail/missing_mapping_after.cpp:20:
src/secureenumconverter.inc:28:6: error: #error "SEC_MAPPING not defined"
     #error "SEC_MAPPING not defined"
      ^~~~~
compilation terminated due to -Wfatal-errors.
